more html testing

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -6,17 +6,69 @@
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<!--<style>
+		 .row div{padding: 20px 10px; border: 1px solid;}
+	 </style>-->
 	</head>
 
 	<body>
+		<div class="jumbotron jumbotron-fluid" style="background: #aaa;">
+			<div class="container">
+				<h1>Jumbotron!</h1>
+				<p>(were they high?)</p>
+			</div>
+		</div>
+
 		<h1>National Park Service information Kiosk</h1>
 		<h2>Created by Ariana Zhu for Capital One 2019 SWE Summit.</h2>
+		<p>Lorem ipsum dolor sit amet, consul labore qui an, qui id alia mnesarchum, ut sale meliore delicatissimi usu. Cu legendos dissentiet vim. Amet virtute splendide te per, te eos iudico fabellas. Audire sensibus efficiendi ius no, officiis pertinacia philosophia mei eu. Volumus fastidii ponderum cum eu, ferri epicuri constituam ex nec. Clita populo placerat ius id, mei no nostrud mediocritatem, sonet prodesset qui id. Est te primis placerat, nec te nonumy platonem.</p>
 
 		<form>
 			<label>Search</label>
 			<input type="text" placeholder="Enter name or keyword" />
 			<input type="submit" value="Search" />
 		</form>
+
+		<!--<div class="container" style="background: skyblue">
+			<h1>Fixed Container</h1>
+		</div>-->k
+
+		<div class="container-fluid" style="background: yellow">
+			<h1>Fluid Container</h1>
+		</div>
+
+		<div class="container">
+			<!--<div class="row" style="background: lightblue">
+				<div class="col-sm-6">column</div>
+				<div class="col-sm-6">column</div>
+			</div>
+
+			<div class="row" style="background: pink">
+				<div class="col-md-6 col-lg-3">column</div>
+				<div class="col-md-6 col-lg-3">column</div>
+				<div class="col-md-6 col-lg-3">column</div>
+				<div class="col-md-6 col-lg-3">column</div>
+			</div>
+
+			<div class="row" style="background: yellow">
+				<div class="col-3">column</div>
+				<div class="col-3">column</div>
+				<div class="col-3">column</div>
+				<div class="col-3">column</div>
+			</div>
+
+			<div class="row" style="background: lightblue">
+				<div class="col-sm">column</div>
+				<div class="col-sm-6">column</div>
+				<div class="col-sm">column</div>
+			</div>
+
+			<div class="row justify-content-sm-center">
+				<div class="col-sm-2 order-last" style="background: pink">1 column</div>
+				<div class="col-sm-2 order-first" style="background: pink">2 column</div>
+				<div class="col-sm-2" style="background: pink">3 column</div>
+			</div>-->
+		</div>
 
 		<!-- JQuery, Tether, Bootstrap JS -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
