added js and html updates

--- a/bootstrap/designation.html
+++ b/bootstrap/designation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NPS Kiosk: Search</title>
+		<title>NPS Kiosk: Find by Designation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Bootstrap CSS -->
@@ -40,7 +40,6 @@
 		          <a class="dropdown-item" href="search.html">By Name or Keyword</a>
 		        </div>
 		      </li>
-
 		    </ul>
 		  </div>
 		</nav>
@@ -55,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col py-3 my-3">
-          <h2 class="display-4">Find a park by name or keyword</h2>
+          <h2 class="display-4">Find a park by designation</h2>
           <form class="form-inline my-2 my-lg-0">
   		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 
