--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -9,6 +9,7 @@
 		<!--<style>
 		 .row div{padding: 20px 10px; border: 1px solid;}
 	 </style>-->
+
 	</head>
 
 	<body>
@@ -33,7 +34,7 @@
 
 		<!-- Nav bar -->
 		<nav class="navbar navbar-expand-md navbar-dark bg-info">
-		  <a class="navbar-brand" href="#">
+		  <a class="navbar-brand" href="index.html">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/US-NationalParkService-ShadedLogo.svg/2000px-US-NationalParkService-ShadedLogo.svg.png" width="30" height="30" alt="">
 				NPS Kiosk
 			</a>
@@ -46,7 +47,7 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 		      </li>
 					<!-- Link -->
 					<!--
@@ -58,10 +59,10 @@
 		          Find a Park
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">By State</a>
-		          <a class="dropdown-item" href="#">By Designation</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="#">Search by Name or Keyword</a>
+		          <a class="dropdown-item" href="state.html">By State</a>
+		          <a class="dropdown-item" href="designation.html">By Designation</a>
+		          <!--<div class="dropdown-divider"></div>-->
+		          <a class="dropdown-item" href="search.html">By Name or Keyword</a>
 		        </div>
 		      </li>
 					<!-- Disabled -->
@@ -70,7 +71,9 @@
 		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 		      </li>v-->
 		    </ul>
-		    <form class="form-inline my-2 my-lg-0">
+
+				<!-- Top right search bar -->
+		    <!--<form class="form-inline my-2 my-lg-0">
 		      <input class="form-control mr-sm-2" type="search" placeholder="Search park name/keyword" aria-label="Search">
 
 					<span data-toggle="tooltip" title="Search" class="text-info" data-placement="bottom">
@@ -78,7 +81,7 @@
 							<img src="https://images.vexels.com/media/users/3/132068/isolated/preview/f9bb81e576c1a361c61a8c08945b2c48-search-icon-by-vexels.png" width="17" height="17"/>
 						</button>
 					</span>
-		    </form>
+		    </form>-->
 		  </div>
 		</nav>
 
@@ -204,10 +207,32 @@
 			</div>-->
 		</div>
 
+		<div class="container py-5">
+			<div class="row justify-content-center">
+				<a href="#top">
+					<button type="button" class="btn btn-outline-dark">Back to top</button>
+				</a>
+			</div>
+		</div>
+
+
 		<!-- JQuery, Tether, Bootstrap JS -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+		<!-- Javascript (put at end of body so page can load first)-->
+		<!--<script>
+			alert("Hello");
+		</script>-->
+
+		<!-- Linking to JS file -->
+		<!--<script src="../scripts/main.js"></script>-->
+
+		<!-- Inline JS -->
+		<!--<li><a onclick="alert('Hello!');" href="search.html">Alert</a></li>-->
+
 		<script>
 			S(function () {
 				S('[data-toggle="tooltip"]').tooltip();
