--- a/bootstrap/state.html
+++ b/bootstrap/state.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NPS Kiosk: Search</title>
+		<title>NPS Kiosk: Find by State</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Bootstrap CSS -->
@@ -55,8 +55,23 @@
     <div class="container">
       <div class="row">
         <div class="col py-3 my-3">
-          <h2 class="display-4">Find a park by name or keyword</h2>
-          <form class="form-inline my-2 my-lg-0">
+          <h2 class="display-4">Find a park by state</h2>
+
+          <!-- Dropdown search -->
+          <div class="input-group">
+            <select class="custom-select" id="inputGroupSelect04">
+              <option selected>Choose a state...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Search</button>
+            </div>
+          </div>
+
+          <!-- Search textbox -->
+          <!--<form class="form-inline my-2 my-lg-0">
   		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 
   					<span data-toggle="tooltip" title="Search" class="text-info" data-placement="bottom">
@@ -64,7 +79,8 @@
   							<img src="https://images.vexels.com/media/users/3/132068/isolated/preview/f9bb81e576c1a361c61a8c08945b2c48-search-icon-by-vexels.png" width="17" height="17"/>
   						</button>
   					</span>
-  		    </form>
+  		    </form>-->
+
         </div>
       </div>
 		</div>
