--- a/bootstrap/404.html
+++ b/bootstrap/404.html
@@ -13,7 +13,8 @@
 
 		<!-- Nav bar -->
 		<nav class="navbar navbar-expand-md navbar-dark bg-info">
-		  <a class="navbar-brand" href="index.html">
+      <!-- FIGURE OUT HREF FOR 404 PAGE -->
+		  <a class="navbar-brand" href="/../index.html">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/US-NationalParkService-ShadedLogo.svg/2000px-US-NationalParkService-ShadedLogo.svg.png" width="30" height="30" alt="">
 				NPS Kiosk
 			</a>
